--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <script src="https://use.fontawesome.com/34e7d2deac.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Arvo" rel="stylesheet">
     <title>260-creative-project-4</title>
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+
+    <div class="footer">
+      <a href="https://github.com/mgardanier/260-creative-project-4"> <i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+    </div>
   </body>
 </html>
