--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- built files will be auto injected -->
 
     <div class="footer">
-      <a href="https://github.com/mgardanier/260-creative-project-4"> <i class="fa fa-github-square fa-3x" aria-hidden="true"></i></a>
+      <a href="https://github.com/mgardanier/260-creative-project-4">Github >>></a>
     </div>
   </body>
 </html>
